--- a/assets/css/contacts.css
+++ b/assets/css/contacts.css
@@ -77,7 +77,7 @@
     padding: 10px;
     margin-bottom: 5px;
     border-radius: 8px;
-    transition: background-color 0.2s ease, color 0.2s ease;
+    transition: background-color 0.1s ease, color 0.1s ease;
     cursor: pointer;
 }
 
@@ -122,7 +122,7 @@
     font-size: 15px;
     color: #111111;
     font-weight: 500;
-    transition: color 0.2s ease;
+    transition: color 0.1s ease;
 }
 
 .contact-info .email {
@@ -501,6 +501,7 @@
         flex: none;
         width: 100%;
         overflow-y: scroll;
+        overflow-x: hidden;
         background: #ffffff;
         box-shadow: 4px 0px 6px rgba(0, 0, 0, 0.08);
     }
